# taxes-compare

./: Cargo.toml  Makefile  README.md
assets/: taxes.json
client/: Dockerfile  Makefile  README.md  VERSION  entrypoint.sh  package-lock.json  package.json  tsconfig.json
client/etc/nginx/: nginx.conf  (+1 more)
client/public/: config.js  index.html  manifest.json
client/src/: AddCountry.css  AddCountry.tsx  App.css  App.tsx  BreakevenTable.css  BreakevenTable.tsx  CurrencyForm.css  CurrencyForm.tsx  CustomTaxBracketPopUp.tsx  Description.css  Description.tsx  ExchangeRateTable.tsx  Header.tsx  IncomeTable.css  IncomeTable.tsx  OtherOptions.css  OtherOptions.tsx  PlotComp.css  PlotComp.tsx  TaxAmountsPlot.tsx  TaxRatesPlot.tsx  TaxTable.css  TaxTable.tsx  end.d.ts  environment.d.ts  index.js  types.ts
deploy/: Makefile  README.md
deploy/helm/: namespace.yml
deploy/scripts/: install_k3s.sh
server/: Cargo.toml  Dockerfile  Makefile  README.md  methodology.md  rates.md
server/assets/: taxes.json
server/src/: errors.rs  exchange_rates.rs  main.rs  utils.rs
server/src/controller/: handle_request.rs  taxes_config.rs
server/src/core/points/: marginal_rate_knot.rs  tax_amount.rs
server/src/core/schedules/: amount_schedule.rs  marginal_schedule.rs
server/test_data/: foo.json  valid_config.json
src/: exchange_rates.rs  lib.rs  main.rs
src/controller/: handle_request.rs  mod.rs  taxes_config.rs
src/core/: mod.rs  segment.rs
src/errors/: errors.rs
src/models/: mod.rs  request.rs  response.rs  segment.rs  tax_schedule.rs  taxes_config.rs
src/utils/: utils.rs
(+20 files in other folders)
