[package]
name = "taxes-compare"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
nalgebra = "0.33.0"
itertools = "0.10"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
rayon = "1.10"
actix-web = "4.0"
env_logger = "0.11"
awc = "3.5.1"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
actix-cors = "0.6"

[dev-dependencies]
assert_approx_eq = "1.0"

[profile.release]
opt-level = 3

[[bin]]
name = "taxes-compare"
path = "src/main.rs"
